[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/prop/shop.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/world/environment/Shop.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/elements/label/PixelLabel.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.607843, 0.737255, 0.0588235, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 9 )

[node name="Shop" type="Node2D"]
script = ExtResource( 2 )

[node name="PriceTag" parent="." instance=ExtResource( 3 )]
margin_left = -6.0
margin_top = -20.0
margin_right = 7.0
margin_bottom = -11.0
custom_styles/normal = SubResource( 1 )
text = "100"

[node name="ShopSprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="ItemSprite" type="Sprite" parent="."]

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_Area2D_body_exited"]
